# studio-data

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_initial_schema.sql
src/studio_data/: __init__.py  config.py  db.py
src/studio_data/tools/: activity.py  clients.py  projects.py
tests/: conftest.py  test_activity.py  test_clients.py  test_projects.py
