[project]
name = "studio-data"
version = "0.1.0"
description = "Data layer and tool functions for StudioOS — Postgres schema, business logic, and audit trails for an interior design practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg-pool>=3.2",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
